# python-project-lvl4

./: .gitignore  README.md  pyproject.toml  requirements.txt
task_manager/: forms.py  models.py  settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/templates/: base.html  index.html  login.html  sign_up_form.html  users.html
task_manager/templates/registration/: login.html  signup.html  update.html
