[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alena-yudzina <lenok.ok.lol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-bootstrap5 = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
